Code bo sung-LE BA QUOC

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,25 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main2Activity">
+    tools:context=".Main2Activity"
+    android:background="@drawable/background1">
     <TextView
         android:id="@+id/datphong"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:textSize="50dp"
-        android:hint="ĐẶT PHÒNG"
+        android:text="ĐẶT PHÒNG"
         android:textStyle="bold"
-        android:textColor="#003cff"
+        android:textColor="#ff00"
         tools:ignore="MissingConstraints" />
-
-    <ImageView
-        android:id="@+id/img"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_below="@id/datphong"
-        android:src="@drawable/khachsan1"
-        app:layout_constraintTop_toBottomOf="@+id/datphong"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Thông tin khách hàng"
+            android:textSize="40dp"
+            android:textColor="#3300ff"
+            android:layout_marginBottom="50dp"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Họ và tên"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Số điện thoại"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="CMND"/>
+        <Button
+            android:id="@+id/btnBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Xác Nhận"
+            android:textColorHint="#FF00"
+            android:layout_marginTop="30dp"/>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
